[package]
name = "jen"
version = "1.0.0" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "A simple JSON generator CLI tool for creating large datasets."
repository = "https://github.com/whitfin/jen"
keywords = ["dataset", "generator", "json", "template"]
categories = ["command-line-interface", "command-line-utilities", "template-engine", "text-processing"]
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
# core dependencies
clap = "2.33"
failure = "0.1"
serde_json = "1.0"
tera = "0.11"

# addon dependencies
fake = "1.3"
objectid = "0.2"
rand = "0.6"
uuid = { version = "0.7", features = ["v4"] }
