[package]
name = "jen"
version = "1.4.0" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "A simple CLI generation tool for creating large datasets."
repository = "https://github.com/whitfin/jen"
keywords = ["dataset", "generator", "json", "template"]
categories = ["command-line-interface", "command-line-utilities", "template-engine", "text-processing"]
readme = "README.md"
edition = "2018"
license = "MIT"

[lib]
name = "jen"
path = "src/lib.rs"

[[bin]]
name = "jen"
path = "src/bin/jen.rs"

[features]
default = ["build"]
build = ["clap", "serde", "serde_json"]

[dependencies]
failure = "0.1"
tera = "1.7"

# addon dependencies
fake = "1.3"
objectid = "0.2"
rand = "0.8"
uuid = { version = "0.8", features = ["v4"] }

# optional dependencies only use for CLI
clap = { version = "2.33", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
