[package]
name = "jen"
version = "1.7.1" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "A simple CLI generation tool for creating large datasets."
repository = "https://github.com/whitfin/jen"
keywords = ["dataset", "generator", "json", "template"]
categories = ["command-line-interface", "command-line-utilities", "template-engine", "text-processing"]
readme = "README.md"
edition = "2018"
license = "MIT"

[lib]
name = "jen"
path = "src/lib.rs"

[[bin]]
name = "jen"
path = "src/bin/jen.rs"

[features]
default = ["build"]
build = ["clap", "serde", "serde_json"]

[dependencies]
failure = "0.1"
tera = "1.20"

# addon dependencies
bson = "2.14"
fake = "1.3"
nanoid = "0.4"
rand = "0.9"
uuid = { version = "1.16", features = ["v4"] }

# optional dependencies only use for CLI
clap = { version = "4.5", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
